--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "acorn": ">=0.5.0",
     "glob": "3",
-    "minimatch": "0.2",
+    "minimatch": "^0.3.4",
     "typescript": "^1.0.1"
   },
   "devDependencies": {
